--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "khatabwedaa/blade-css-icons": "^1.4",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
         "mallardduck/blade-boxicons": "^2.4",
         "mansoor/blade-lets-icons": "^1.0",
         "masmerise/livewire-toaster": "^2.3",
@@ -20,6 +21,7 @@
         "spatie/laravel-multitenancy": "^3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
