--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.1",
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "hover.css": "^2.3.2"
     }
 }
